--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "express-validator": "^7.3.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "multer": "^2.0.2",
+    "sharp": "^0.34.5"
   }
 }
