--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.13.4",
     "lucide-react": "^0.294.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0"
   },
