--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
+    "form-data": "^4.0.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.6.3",
     "multer": "^2.0.2",
+    "node-fetch": "^2.7.0",
     "pdf-parse": "^1.1.1",
     "sharp": "^0.34.5",
     "tesseract.js": "^7.0.0"
