--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "seed:suppliers": "node scripts/seedSuppliers.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -23,4 +24,3 @@
     "tesseract.js": "^7.0.0"
   }
 }
-
